; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/s390/crypto/extr_sha256_s390.c_sha256_init.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/s390/crypto/extr_sha256_s390.c_sha256_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.shash_desc = type { i32 }
%struct.s390_sha_ctx = type { i32, i64, i32* }

@SHA256_H0 = common dso_local global i32 0, align 4
@SHA256_H1 = common dso_local global i32 0, align 4
@SHA256_H2 = common dso_local global i32 0, align 4
@SHA256_H3 = common dso_local global i32 0, align 4
@SHA256_H4 = common dso_local global i32 0, align 4
@SHA256_H5 = common dso_local global i32 0, align 4
@SHA256_H6 = common dso_local global i32 0, align 4
@SHA256_H7 = common dso_local global i32 0, align 4
@KIMD_SHA_256 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.shash_desc*)* @sha256_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sha256_init(%struct.shash_desc* %0) #0 {
  %2 = alloca %struct.shash_desc*, align 8
  %3 = alloca %struct.s390_sha_ctx*, align 8
  store %struct.shash_desc* %0, %struct.shash_desc** %2, align 8
  %4 = load %struct.shash_desc*, %struct.shash_desc** %2, align 8
  %5 = call %struct.s390_sha_ctx* @shash_desc_ctx(%struct.shash_desc* %4)
  store %struct.s390_sha_ctx* %5, %struct.s390_sha_ctx** %3, align 8
  %6 = load i32, i32* @SHA256_H0, align 4
  %7 = load %struct.s390_sha_ctx*, %struct.s390_sha_ctx** %3, align 8
  %8 = getelementptr inbounds %struct.s390_sha_ctx, %struct.s390_sha_ctx* %7, i32 0, i32 2
  %9 = load i32*, i32** %8, align 8
  %10 = getelementptr inbounds i32, i32* %9, i64 0
  store i32 %6, i32* %10, align 4
  %11 = load i32, i32* @SHA256_H1, align 4
  %12 = load %struct.s390_sha_ctx*, %struct.s390_sha_ctx** %3, align 8
  %13 = getelementptr inbounds %struct.s390_sha_ctx, %struct.s390_sha_ctx* %12, i32 0, i32 2
  %14 = load i32*, i32** %13, align 8
  %15 = getelementptr inbounds i32, i32* %14, i64 1
  store i32 %11, i32* %15, align 4
  %16 = load i32, i32* @SHA256_H2, align 4
  %17 = load %struct.s390_sha_ctx*, %struct.s390_sha_ctx** %3, align 8
  %18 = getelementptr inbounds %struct.s390_sha_ctx, %struct.s390_sha_ctx* %17, i32 0, i32 2
  %19 = load i32*, i32** %18, align 8
  %20 = getelementptr inbounds i32, i32* %19, i64 2
  store i32 %16, i32* %20, align 4
  %21 = load i32, i32* @SHA256_H3, align 4
  %22 = load %struct.s390_sha_ctx*, %struct.s390_sha_ctx** %3, align 8
  %23 = getelementptr inbounds %struct.s390_sha_ctx, %struct.s390_sha_ctx* %22, i32 0, i32 2
  %24 = load i32*, i32** %23, align 8
  %25 = getelementptr inbounds i32, i32* %24, i64 3
  store i32 %21, i32* %25, align 4
  %26 = load i32, i32* @SHA256_H4, align 4
  %27 = load %struct.s390_sha_ctx*, %struct.s390_sha_ctx** %3, align 8
  %28 = getelementptr inbounds %struct.s390_sha_ctx, %struct.s390_sha_ctx* %27, i32 0, i32 2
  %29 = load i32*, i32** %28, align 8
  %30 = getelementptr inbounds i32, i32* %29, i64 4
  store i32 %26, i32* %30, align 4
  %31 = load i32, i32* @SHA256_H5, align 4
  %32 = load %struct.s390_sha_ctx*, %struct.s390_sha_ctx** %3, align 8
  %33 = getelementptr inbounds %struct.s390_sha_ctx, %struct.s390_sha_ctx* %32, i32 0, i32 2
  %34 = load i32*, i32** %33, align 8
  %35 = getelementptr inbounds i32, i32* %34, i64 5
  store i32 %31, i32* %35, align 4
  %36 = load i32, i32* @SHA256_H6, align 4
  %37 = load %struct.s390_sha_ctx*, %struct.s390_sha_ctx** %3, align 8
  %38 = getelementptr inbounds %struct.s390_sha_ctx, %struct.s390_sha_ctx* %37, i32 0, i32 2
  %39 = load i32*, i32** %38, align 8
  %40 = getelementptr inbounds i32, i32* %39, i64 6
  store i32 %36, i32* %40, align 4
  %41 = load i32, i32* @SHA256_H7, align 4
  %42 = load %struct.s390_sha_ctx*, %struct.s390_sha_ctx** %3, align 8
  %43 = getelementptr inbounds %struct.s390_sha_ctx, %struct.s390_sha_ctx* %42, i32 0, i32 2
  %44 = load i32*, i32** %43, align 8
  %45 = getelementptr inbounds i32, i32* %44, i64 7
  store i32 %41, i32* %45, align 4
  %46 = load %struct.s390_sha_ctx*, %struct.s390_sha_ctx** %3, align 8
  %47 = getelementptr inbounds %struct.s390_sha_ctx, %struct.s390_sha_ctx* %46, i32 0, i32 1
  store i64 0, i64* %47, align 8
  %48 = load i32, i32* @KIMD_SHA_256, align 4
  %49 = load %struct.s390_sha_ctx*, %struct.s390_sha_ctx** %3, align 8
  %50 = getelementptr inbounds %struct.s390_sha_ctx, %struct.s390_sha_ctx* %49, i32 0, i32 0
  store i32 %48, i32* %50, align 8
  ret i32 0
}

declare dso_local %struct.s390_sha_ctx* @shash_desc_ctx(%struct.shash_desc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
